bring in markup instead of using include

--- a/views/friends.pug
+++ b/views/friends.pug
@@ -1,10 +1,35 @@
 extends root 
 
+include mixins/friend-form-mixin.pug
+
 block scripts 
   script(src='/scripts/friend_request.js' defer)
   
 block content 
   if !user  
     p Sign up to start chatting! 
+  
+  else if user.friends.length == 0
+    p Add friends to start chatting! 
+  
   else
-    include includes/friend-list.pug
+    div.friends 
+      each entry in user.friends 
+        div.friend 
+          p.username= entry.friend.username 
+            if entry.status == 'friend' && entry.friend.showOnlineStatus
+              span(class=`online-status ${entry.friend.online ? 'online' : 'offline'}`)= entry.friend.online ? 'Online' : 'Offline'
+            
+            if entry.status == 'sent'
+              span.friend-status friendship request pending 
+              div 
+                +friendForms('friendship-reject', 'Cancel Friend Request', entry.friend._id)
+            else if entry.status == 'recieved'
+              span.friend-status requested to be your friend 
+              div 
+                +friendForms('friendship-accept', 'Accept Friend Request', entry.friend._id)
+              div 
+                +friendForms('friendship-reject', 'Reject Friend Request', entry.friend._id)
+            else if entry.status == 'friend'
+              div 
+                +friendForms('friendship-reject', 'Remove Friend', entry.friend._id) 
