modal styling in its own file, update reference in index view

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,8 @@ block scripts
 
 block styles
   link(rel='stylesheet' href='/styles/forms.css')
+  link(rel='stylesheet' href='/styles/modals.css')
+
 
 block content 
   if !user 
