--- a/public/styles/chat-room.css
+++ b/public/styles/chat-room.css
@@ -1,5 +1,70 @@
+#chat-room {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr auto;
+  row-gap: .5rem;
+  column-gap: 1rem;
+}
+
 #messages {
+  grid-area 1 / 1 / 2 / 2;
   height: 60vh;
   overflow-y: scroll;
-  border: 1px solid black;
+  box-shadow: 1px 1px 3px #475569, inset 1px 1px 2px #475569;
+  border-radius: 1rem;
+  padding: 0 2rem;
+}
+
+.message p {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: .5rem;
+}
+
+.message .username {
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  grid-column: 1 / 2;
+}
+
+.message .message-content {
+  grid-column: 2 / 3;
+}
+
+#message-form {
+  display: flex;
+  grid-area: 2 / 1 / 3 / 2;
+  gap: .25rem;
+}
+
+#message-form input {
+  flex: 1
+}
+
+#users {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.title-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+#owner-options {
+  background: transparent;
+  border: 0;
+}
+
+#owner-options:hover {
+  transform: scale(1.1);
+}
+
+#owner-options:active {
+  transform: scale(1);
+}
+
+#owner-options img {
+  width: 25px;
+  height: 25px;
 }
