--- a/views/chat-room.pug
+++ b/views/chat-room.pug
@@ -63,3 +63,8 @@ block content
       div(id='users')
         p Users
         ul
+          if chat.type == 'private' && chat.owner
+            li: a(href=`/users/${chat.owner.username}`)= chat.owner.username
+          if chat.type == 'private' || chat.type == 'private-message'
+            each entry in chat.allowedUsers 
+              li: a(href=`/users/${entry.username}`)= entry.username
