--- a/views/chat.pug
+++ b/views/chat.pug
@@ -9,33 +9,42 @@ block scripts
 block content 
   if !user
     p Sign up to start chatting! 
-  else 
-    h2.section-header Friends
-    if user.friends.length > 0 
-      ul 
-        each entry in user.friends 
-          if entry.status == 'friend'
-            li 
-              p: a(href=`/chat/${entry.chat}`)= entry.friend.username
-    else
-      p No one has been added to your friends list
+  else
+    div.category 
+      div.section-header 
+        h2 Friends
+        button.expand-section(type='button'): img(src='/images/chevron-down.svg' alt='expand friends')
+      div.list
+        if user.friends.length > 0 
+          ul 
+            each entry in user.friends 
+              if entry.status == 'friend'
+                li 
+                  p: a(href=`/chat/${entry.chat}`)= entry.friend.username
+        else
+          p No one has been added to your friends list
 
-    h2.section-header My Rooms 
-      span.header-image
-        a(href='/chat/create')
-          img(src='/images/plus.svg' alt='create chat')
+    div.category
+      div.section-header 
+        h2 My Rooms
+        a(href='/chat/create'): img(src='/images/plus.svg' alt='create chat')
+        button.expand-section(type='button'): img(src='/images/chevron-down.svg' alt='expand friends')
+      div.list
+        if usersChatRooms && usersChatRooms.length > 0
+          ul 
+            each room in usersChatRooms
+              li: a(href=`/chat/${room._id}`)= room.name 
+        else 
+          p You have not created any chat rooms
 
-    if usersChatRooms && usersChatRooms.length > 0
-      ul 
-        each room in usersChatRooms
-          li: a(href=`/chat/${room._id}`)= room.name 
-    else 
-      p You have not created any chat rooms
-      
-    h2.section-header Public Rooms
-    if publicRooms.length > 0
-      ul 
-        each room in publicRooms 
-          li: a(href=`/chat/${room._id}`)= room.name 
-    else 
-      p There are no public Rooms
+    div.category      
+      div.section-header 
+        h2 Public Rooms
+        button.expand-section(type='button'): img(src='/images/chevron-down.svg' alt='expand friends')
+      div.list    
+        if publicRooms.length > 0
+          ul 
+            each room in publicRooms 
+              li: a(href=`/chat/${room._id}`)= room.name 
+        else 
+          p There are no public Rooms
